--- a/HRMDemo/Components/Pages/Home.razor
+++ b/HRMDemo/Components/Pages/Home.razor
@@ -4,4 +4,10 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome 
+
+<br />
+@foreach (var widgetType in Widgets)
+{
+    <DynamicComponent Type="@widgetType" />
+}
