add pagetitle component

--- a/HRMDemo/Components/Pages/EmployeeOverview.razor
+++ b/HRMDemo/Components/Pages/EmployeeOverview.razor
@@ -1,6 +1,11 @@
 ﻿@page "/employeeoverview"
 @* @attribute [StreamRendering(true)] *@
 @rendermode InteractiveServer
+
+<PageTitle>
+    @nameof(EmployeeOverview)
+</PageTitle>
+
 <h1> Employee Overview </h1>
 @if (Employees == null)
 {
